--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Lucky Raffle</title>
     <link rel="shortcut icon" href="./assests/logo.png" type="image/x-icon">
     <!-- css link -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <!-- Wallet Connect -->
     <script src="https://unpkg.com/web3@latest/dist/web3.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/web3modal"></script>
